Specify permgen + max heap. Include docs.